feat(playback): one column per resolution on the wide quality sheet
The quality *table* it replaces was reported as "literally just a list": a 480 dp
cap that sliced its last row mid-glyph with no scrollbar, a RELEASE column
carrying the same "REMUX · DV" for 4K Max and 4K High beside 270 dp of dead air,
and a FIT column drawing five identical meters on a 755 Mb/s line.

- Best available leads as a full-width strip; the alternatives lay out as one
  column per resolution, each stacking only the bands that title actually has.
  Nothing scrolls - `VideoResolution` has six members and `optionsForBucket`
  emits at most four bands each, so the offer is bounded and fits the width.
  `wideDialogMaxWidth` 920 -> 1200 dp.
- A cell reads band name, then dynamic range and audio as outlined marks, then
  size and needs, then rip type and host. Down a column the rip type repeats and
  the marks do not, so the old order led with the repeating part.
  `describeProvenance` splits rip type and host back out of `describeRelease` so
  nothing prints twice; SDR is drawn but muted, never accented.
- `bandFor` gives a collapsed bucket the class it would have been banded as, so
  a lone row says "Mid" rather than "Only option"; `isTopBandBelowMax` appends
  "(Max)" where a resolution's top band is below its Max boundary. The band word
  itself is never rewritten - the bands are absolute.
- `sourceKey` outlines the cell Best available resolves to instead of restating
  it, since it is routinely the row directly beneath the hero.

STATUS.md records what was verified and what was not: the panel has never been
watched against real playback. The one attempt ran under `dev-desktop.ps1 -Mode
hot`, which cannot reach a first frame, and the resulting flicker-then-"No safe
automatic source matched" reads exactly like a regression in this work. It is
not - the selection path is unchanged - and it needs a debug MSI.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claud